<resources>
    <string name="app_name">Kotlin Practices</string>
    <string name="go_to_task_one">Task One</string>
    <string name="go_to_task_two">Task Two</string>
    <string name="go_to_dispatcher_type">Dispatcher Type</string>
    <string name="task_two_description">Buat kelas untuk menjumlah 2 array. Harus ada interface fungsi untuk menjumlah, buat kelas untuk implementasi dari interface tersebut, dan jumlah dua array dengan index yg sama, misal:\n a = {1, 2, 3, 4}\n b = {5, 6, 7}\n c = a + b\n hasil c: 6, 8, 10, 4\n pakai kotlin</string>
    <string name="result_btn">Result</string>
    <string name="result_tv">…</string>
    <string name="back_btn">Back</string>
    <string name="increase_value">Increase Value</string>
    <string name="reset_value">Reset Value</string>
    <string name="position">Position</string>
    <string name="value_x">Value X: %1$d</string>
    <string name="value_y">Value Y: %1$d</string>
    <string name="value_z">Value Z: %1$d</string>

    <string name="go_to_kotlin_notes">Go to Kotlin Notes</string>
    <string name="kotlin_notes_title">Kotlin Notes</string>

    <string name="about">About</string>
    <string name="term_of_use">Term Of Use</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="home_page">Home Page</string>
    <string name="coroutine_title">Coroutine</string>
    <string name="simple_coroutine_title">Simple Coroutine</string>
    <string name="run_dispatcher_default">Run Dispatcher Default</string>
    <string name="text_not_executed">Not yet executed</string>
    <string name="run_dispatcher_io">Run Dispatcher IO</string>
    <string name="run_dispatcher_main">Run Dispatcher Main</string>
    <string name="run_dispatcher_unconfined">Run Dispatcher Unconfined</string>
    <string name="fetch_data_success">✅ Data successfully fetched from coroutine!</string>
    <string name="run_fetch_data">Run Fetch Data</string>
    <string name="cancel_fetch">Cancel Fetch</string>
    <string name="cancel_run_dispatcher">Cancel Run Dispatcher</string>
    <string name="coroutine_dispatcher_canceled">❌ Coroutine dispatcher Canceled</string>
    <string name="fetch_data">⏳ Fetching data…</string>
    <string name="fetch_data_canceled">❌ Fetch data canceled</string>
    <string name="running_on">Running on: %1$s</string>
    <string name="dispatcher_not_running">ℹ️ No Dispatcher is running</string>

    <string name="thread_and_executor_title">Thread Executor</string>
    <string name="running_with_thread">⏳Running with Thread…</string>
    <string name="thread_finished">✅Thread Finished</string>
    <string name="running_with_executor">⏳Running with Executor…</string>
    <string name="executor_finished">✅Executor Finished</string>
    <string name="cancelling">❌Cancelling…</string>
    <string name="start_with_thread">Start with Thread</string>
    <string name="start_with_executor">Start with Executor</string>
    <string name="cancel">Cancel</string>
    <string name="idle">Idle</string>
    <string name="thread_cancelled_interrupted">Thread cancelled/interrupted</string>
    <string name="executor_task_cancelled_interrupted">Executor task cancelled/interrupted</string>
    <string name="start_coroutine">Start Coroutine</string>
    <string name="cancelling_coroutine">⏳Cancelling coroutine…</string>
    <string name="coroutine_task_cancelled">❌Coroutine task cancelled</string>
    <string name="coroutine_task_finished">✅Coroutine task finished</string>
    <string name="running_coroutine_task">⏳Running Coroutine task…</string>
    <string name="cancelled_by_user">Cancelled by user</string>

    <string name="calc_title_old">Calculator Old</string>
    <string name="calc_title">Calculator</string>


</resources>