<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idle"
        android:textSize="18sp"
        android:paddingBottom="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleLarge"/>

    <Button
        android:id="@+id/btnStartCoroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_coroutine"
        android:backgroundTint="@color/sand_white"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/sand_white"
        android:enabled="false"/>
</LinearLayout>
